k8s/overlays/node-uat-docker/DeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: nodejs
  name: node
spec:
  replicas: 1
  selector:
    app: nodejs
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: node-docker:latest
        imagePullPolicy: IfNotPresent
        name: nodejs-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - nodejs-app
      from:
        kind: ImageStreamTag
        name: node-docker:latest
    type: ImageChange
