k8s/overlays/node-uat-docker/Route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-router
  labels:
    app: nodejs
spec:
  host: ""
  to:
    kind: Service
    name: node-service-docker
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
